Fix spacing around nav bar

--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -65,7 +65,7 @@ a:hover {
 
 @media only screen and (min-width: 1024px) {
   body {
-    justify-content: space-around;
+    justify-content: space-between;
     flex-direction: row;
   }
 
